Fixed searchBar disappearing on mobile

--- a/src/sass/_mediaqueries.scss
+++ b/src/sass/_mediaqueries.scss
@@ -71,6 +71,7 @@
         .searchBar{
           width: 50%;
           left: 53%;
+          opacity: 1;
           input{
             padding: 10px;
           }
@@ -104,15 +105,14 @@
           font-size: 7vw;
         }
         .searchBar{
-          width: 0;
+          width: 90%;
+          opacity: 0;
           overflow: hidden;
           top: 90px;
           z-index: 999;
-          position: fixed;
+          position: absolute;
           left: 50%;
-          transition: width .3s;
-          // background: $bgColor;
-          // box-shadow: 0px 0px 76px 17px rgba(0,0,0,0.75);
+          transition: opacity .3s;
           border-radius: 25px;
           .searchBar_btn{
             right: 0;
@@ -167,9 +167,9 @@
               transition: transform 0.3s ease-in-out, opacity 0.3s;
             }
         }
-        .navMenu_btn input:checked ~ span{
-          // background: green;
-        }
+        // .navMenu_btn input:checked ~ span{
+        //   // background: green;
+        // }
         .navMenu_btn input:checked ~ span:nth-child(2){
           transform: rotate(45deg) translate(7px, 7px);
         }
@@ -206,6 +206,7 @@
           overflow: hidden;
           height: auto;
           left: 0;
+          z-index: -1;
           .title{
             font-size: 5vw;
           }
