--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -24,10 +24,10 @@ body{
             left: 50%;
             transform: translateX(-50%);
             .logo{
-                float: left;
                 font-size: 3vw;
                 color: $yellow;
                 font-family: $primary-font;
+                display: inline-block;
                 span{
                     color: $red;
                 }
@@ -87,6 +87,7 @@ body{
         }
         .content{
             width: 100%;
+            overflow: hidden;
             .sideNav{
                 width: 10%;
                 float: left;
